# memories-creator

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
memories_creator/: __init__.py  cli.py  config.py  main.py  media_utils.py  music_generator.py  slide_editor.py  transitions.py  video_processor.py
